@@ -16,6 +16,8 @@ POSTDEPLOY
 
 - remove `zon_videosinglepage_via_html5` from feature toggles
 
+- change `author_articles_query_type` to "elasticsearch-query" to activate TMS-233
+
 
 3.154 (unreleased)
 ------------------
